tests/elab/fail/naked_expression4.t20
;; Naked application expression at top level.

(: id (-> 'a 'a))
(define (id x) x)

(id #t)